# IA-Python

./: .env.example  README.md  exemplo.txt  main.py  pyproject.toml  requirements.txt  versel.json
examples/: documento_aprovacao.txt  mensagem_ano_novo.txt  problema_tecnico.txt  relatorio_financeiro.txt  spam.txt
src/backend/: agents.py
src/frontend/: index.html
src/frontend/css/: style.css
src/frontend/js/: script.js
